@@ -55,7 +55,8 @@ public:
   float       getFOV(void) const;
   void        setFOV(const float in_fov);
   void        setupFrustum(RenderContext* rctx, const Sphere& viewvolumeSphere);
-  Vertex      setObserver(bool automatic, Vertex eye); /* applied after model; returns previous setting */
+  Vertex      getObserver();
+  void	      setObserver(bool automatic, Vertex eye);
   void	      setupViewer();
   Frustum     frustum;
 private:
